# conection-db-aula

./: .gitignore  README.md  main.py  pyproject.toml
app/models/: endereco.py  pedido.py  pessoa.py  telefone.py
app/repositories/: __init__.py  endereco_repo.py  pedido_repo.py  pessoa_repo.py  telefone_repo.py
config/: database.py
scripts/: create_pessoa.py  delete_pessoa.py  read_pessoas.py
