[project]
name = "conection-db-aula"
version = "0.1.0"
description = ""
authors = [
    {name = "Jean Carlos",email = "jeancc.costa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "alembic (==1.15.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
